# python-cmake-file-api

./: .editorconfig  .gitignore  CONTRIBUTING.md  COPYING  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
cmake_file_api/: __init__.py  cmake.py  errors.py
cmake_file_api/kinds/: api.py  common.py  kind.py
cmake_file_api/kinds/cache/: __init__.py  api.py  v2.py
cmake_file_api/kinds/codemodel/: api.py  v2.py
cmake_file_api/kinds/common/: __init__.py  backtraceGraph.py
cmake_file_api/kinds/configureLog/: api.py  v1.py
cmake_file_api/kinds/ctestInfo/: __init__.py  api.py  v1.py
cmake_file_api/kinds/toolchains/: api.py  v1.py
cmake_file_api/reply/: api.py
cmake_file_api/reply/index/: api.py  v1.py
cmake_file_api/reply/index/file/: api.py  v1.py
cmake_file_api/reply/v1/: api.py
example/: README.md  script.py
example/project/: CMakeLists.txt
example/project/base/: CMakeLists.txt  base.cpp
example/project/base/include/: base.hpp
example/project/dep/: CMakeLists.txt  dep.cpp
example/project/dep/include/: dep.hpp
example/project/exe/: CMakeLists.txt  exe.cpp
tests/: conftest.py  test_ctestinfo.py  test_regression.py
tests/resources/: output-ctestInfo-v1.json
