[metadata]
name = cmake-file-api
license = MIT
author = Anonymous Maarten
author_email = anonymous.maarten@gmail.com
description = Read and interpret CMake's file-based API
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/madebr/python-cmake-file-api
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    Programming Language :: C
    Programming Language :: C++
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages=find:
setup_requires = 
    setuptools_scm

[options.packages.find]
exclude =
    tests
    tests.*
    *.tests
